--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "queue-typescript": "^1.0.1",
     "ts-keyof": "^1.3.0"
   },
   "devDependencies": {
