--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "math-evaluator-server",
   "version": "1.0.0",
   "description": "Math evaluator backend.",
-  "main": "src/index.js",
+  "main": "lib/server.js",
   "scripts": {
     "build": "tsc",
     "start": "node .",
@@ -11,6 +11,7 @@
   "author": "Tin Štefanić",
   "license": "MIT",
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "queue-typescript": "^1.0.1",
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   }
